@@ -5,7 +5,8 @@
 \title{Plot gistic results as a bubble plot}
 \usage{
 gisticBubblePlot(gistic = NULL, color = NULL, markBands = NULL,
-  fdrCutOff = 0.1, txtSize = 3, file = NULL, width = 6, height = 5)
+  fdrCutOff = 0.1, txtSize = 3, file = NULL, width = 6,
+  height = 5)
 }
 \arguments{
 \item{gistic}{an object of class \code{GISTIC} generated by \code{readGistic}}
