@@ -5,9 +5,10 @@
 \title{Plot gistic results.}
 \usage{
 gisticOncoPlot(gistic, top = NULL, showTumorSampleBarcodes = FALSE,
-  clinicalData = NULL, clinicalFeatures = NULL, sortByAnnotation = FALSE,
-  annotationColor = NULL, bandsToIgnore = NULL, removeNonAltered = FALSE,
-  colors = NULL, fontSize = 10)
+  clinicalData = NULL, clinicalFeatures = NULL,
+  sortByAnnotation = FALSE, annotationColor = NULL,
+  bandsToIgnore = NULL, removeNonAltered = FALSE, colors = NULL,
+  fontSize = 10)
 }
 \arguments{
 \item{gistic}{an \code{\link{GISTIC}} object generated by \code{\link{readGistic}}}
