@@ -10,8 +10,8 @@ lollipopPlot(maf, gene = NULL, AACol = NULL, labelPos = NULL,
   proteinID = NULL, repel = FALSE, collapsePosLabel = TRUE,
   legendTxtSize = 10, labPosAngle = 0, domainLabelSize = 2.5,
   axisTextSize = c(9, 12), printCount = FALSE, colors = NULL,
-  domainColors = NULL, labelOnlyUniqueDoamins = TRUE, defaultYaxis = TRUE,
-  titleSize = c(12, 10), pointSize = 1.5)
+  domainColors = NULL, labelOnlyUniqueDoamins = TRUE,
+  defaultYaxis = TRUE, titleSize = c(12, 10), pointSize = 1.5)
 }
 \arguments{
 \item{maf}{an \code{\link{MAF}} object generated by \code{\link{read.maf}}}
