@@ -7,7 +7,8 @@
 mafSurvival(maf, genes = NULL, samples = NULL, clinicalData = NULL,
   time = "Time", Status = "Status", groupNames = c("Mutant", "WT"),
   showConfInt = TRUE, addInfo = TRUE, col = c("maroon", "royalblue"),
-  isTCGA = FALSE, textSize = 12, fn = NULL, width = 6, height = 6)
+  isTCGA = FALSE, textSize = 12, fn = NULL, width = 6,
+  height = 6)
 }
 \arguments{
 \item{maf}{an \code{\link{MAF}} object generated by \code{\link{read.maf}}}
