@@ -4,16 +4,18 @@
 \alias{oncoplot}
 \title{draw an oncoplot}
 \usage{
-oncoplot(maf, top = 20, genes = NULL, mutsig = NULL, mutsigQval = 0.1,
-  drawRowBar = TRUE, drawColBar = TRUE, clinicalFeatures = NULL,
-  annotationDat = NULL, annotationColor = NULL, genesToIgnore = NULL,
-  showTumorSampleBarcodes = FALSE, removeNonMutated = TRUE, colors = NULL,
-  sortByMutation = FALSE, sortByAnnotation = FALSE,
-  annotationOrder = NULL, keepGeneOrder = FALSE, GeneOrderSort = TRUE,
-  sampleOrder = NULL, writeMatrix = FALSE, fontSize = 10,
-  SampleNamefontSize = 10, titleFontSize = 15, legendFontSize = 12,
-  annotationFontSize = 12, annotationTitleFontSize = 12,
-  bgCol = "#CCCCCC", borderCol = NA, colbar_pathway = FALSE)
+oncoplot(maf, top = 20, genes = NULL, mutsig = NULL,
+  mutsigQval = 0.1, drawRowBar = TRUE, drawColBar = TRUE,
+  clinicalFeatures = NULL, annotationDat = NULL,
+  annotationColor = NULL, genesToIgnore = NULL,
+  showTumorSampleBarcodes = FALSE, removeNonMutated = TRUE,
+  colors = NULL, sortByMutation = FALSE, sortByAnnotation = FALSE,
+  annotationOrder = NULL, keepGeneOrder = FALSE,
+  GeneOrderSort = TRUE, sampleOrder = NULL, writeMatrix = FALSE,
+  fontSize = 10, SampleNamefontSize = 10, titleFontSize = 15,
+  legendFontSize = 12, annotationFontSize = 12,
+  annotationTitleFontSize = 12, bgCol = "#CCCCCC", borderCol = NA,
+  colbar_pathway = FALSE)
 }
 \arguments{
 \item{maf}{an \code{\link{MAF}} object generated by \code{\link{read.maf}}}
