@@ -5,11 +5,11 @@
 \title{draw an oncostrip similar to cBioportal oncoprinter output.}
 \usage{
 oncostrip(maf, genes = NULL, top = 5, colors = NULL, sort = TRUE,
-  clinicalFeatures = NULL, annotationDat = NULL, sortByAnnotation = FALSE,
-  annotationOrder = NULL, removeNonMutated = TRUE,
-  showTumorSampleBarcodes = FALSE, annotationColor = NULL, fontSize = 10,
-  titleFontSize = 15, legendFontSize = 12, bgCol = "#CCCCCC",
-  borderCol = NA)
+  clinicalFeatures = NULL, annotationDat = NULL,
+  sortByAnnotation = FALSE, annotationOrder = NULL,
+  removeNonMutated = TRUE, showTumorSampleBarcodes = FALSE,
+  annotationColor = NULL, fontSize = 10, titleFontSize = 15,
+  legendFontSize = 12, bgCol = "#CCCCCC", borderCol = NA)
 }
 \arguments{
 \item{maf}{an \code{\link{MAF}} object generated by \code{read.maf}}
