@@ -4,9 +4,9 @@
 \alias{pfamDomains}
 \title{pfam domain annotation and summarization.}
 \usage{
-pfamDomains(maf = NULL, AACol = NULL, summarizeBy = "AAPos", top = 5,
-  domainsToLabel = NULL, baseName = NULL, varClass = "nonSyn",
-  width = 5, height = 5, labelSize = 3)
+pfamDomains(maf = NULL, AACol = NULL, summarizeBy = "AAPos",
+  top = 5, domainsToLabel = NULL, baseName = NULL,
+  varClass = "nonSyn", width = 5, height = 5, labelSize = 3)
 }
 \arguments{
 \item{maf}{an \code{\link{MAF}} object generated by \code{\link{read.maf}}}
