@@ -4,7 +4,8 @@
 \alias{plotApobecDiff}
 \title{Plot differences between APOBEC enriched and non-APOBEC enriched samples.}
 \usage{
-plotApobecDiff(tnm, maf, title_size = 1, axis_lwd = 2, font_size = 1.2)
+plotApobecDiff(tnm, maf, title_size = 1, axis_lwd = 2,
+  font_size = 1.2)
 }
 \arguments{
 \item{tnm}{output generated by \code{\link{trinucleotideMatrix}}}
