@@ -4,9 +4,10 @@
 \alias{plotmafSummary}
 \title{Plots maf summary.}
 \usage{
-plotmafSummary(maf, rmOutlier = TRUE, dashboard = TRUE, titvRaw = TRUE,
-  addStat = NULL, showBarcodes = FALSE, fs = 1, textSize = 0.8,
-  color = NULL, titleSize = c(1, 0.8), titvColor = NULL, top = 10)
+plotmafSummary(maf, rmOutlier = TRUE, dashboard = TRUE,
+  titvRaw = TRUE, addStat = NULL, showBarcodes = FALSE, fs = 1,
+  textSize = 0.8, color = NULL, titleSize = c(1, 0.8),
+  titvColor = NULL, top = 10)
 }
 \arguments{
 \item{maf}{an \code{\link{MAF}} object generated by \code{\link{read.maf}}}
