@@ -5,8 +5,8 @@
 \title{Read and summarize gistic output.}
 \usage{
 readGistic(gisticAllLesionsFile = NULL, gisticAmpGenesFile = NULL,
-  gisticDelGenesFile = NULL, gisticScoresFile = NULL, cnLevel = "all",
-  isTCGA = FALSE)
+  gisticDelGenesFile = NULL, gisticScoresFile = NULL,
+  cnLevel = "all", isTCGA = FALSE)
 }
 \arguments{
 \item{gisticAllLesionsFile}{All Lesions file generated by gistic. e.g; all_lesions.conf_XX.txt, where XX is the confidence level. Required. Default NULL.}
