@@ -4,7 +4,8 @@
 \alias{signatureEnrichment}
 \title{Performs sample stratification based on signature contribution and enrichment analysis.}
 \usage{
-signatureEnrichment(maf, sig_res, minMut = 5, useCNV = FALSE, fn = NULL)
+signatureEnrichment(maf, sig_res, minMut = 5, useCNV = FALSE,
+  fn = NULL)
 }
 \arguments{
 \item{maf}{an \code{\link{MAF}} object used for signature analysis.}
