@@ -4,9 +4,9 @@
 \alias{somaticInteractions}
 \title{Exact tests to detect mutually exclusive, co-occuring and altered genesets.}
 \usage{
-somaticInteractions(maf, top = 25, genes = NULL, pvalue = c(0.05, 0.01),
-  returnAll = FALSE, findPathways = TRUE, kMax = 3, fontSize = 0.8,
-  verbose = TRUE)
+somaticInteractions(maf, top = 25, genes = NULL, pvalue = c(0.05,
+  0.01), returnAll = FALSE, findPathways = TRUE, kMax = 3,
+  fontSize = 0.8, verbose = TRUE)
 }
 \arguments{
 \item{maf}{an \code{\link{MAF}} object generated by \code{\link{read.maf}}}
