@@ -4,8 +4,9 @@
 \alias{subsetMaf}
 \title{Subset MAF}
 \usage{
-subsetMaf(maf, tsb = NULL, genes = NULL, fields = NULL, query = NULL,
-  mafObj = FALSE, includeSyn = TRUE, isTCGA = FALSE, restrictTo = "all")
+subsetMaf(maf, tsb = NULL, genes = NULL, fields = NULL,
+  query = NULL, mafObj = FALSE, includeSyn = TRUE, isTCGA = FALSE,
+  dropLevels = TRUE, restrictTo = "all")
 }
 \arguments{
 \item{maf}{an MAF object generated by \code{\link{read.maf}}}
@@ -23,6 +24,8 @@ subsetMaf(maf, tsb = NULL, genes = NULL, fields = NULL, query = NULL,
 \item{includeSyn}{Default TRUE, only applicable when mafObj = FALSE. If mafObj = TRUE, synonymous variants will be stored in a seperate slot of MAF object.}
 
 \item{isTCGA}{Is input MAF file from TCGA source.}
+
+\item{dropLevels}{Default TRUE.}
 
 \item{restrictTo}{restrict subset operations to these. Can be 'all', 'cnv', or 'mutations'. Default 'all'. If 'cnv' or 'mutations', subset operations will only be applied on copy-number or mutation data respectively, while retaining other parts as is.}
 }
